更改横屏滑动架构

--- a/www/index.html
+++ b/www/index.html
@@ -64,7 +64,7 @@
                         <img src="img/search-bd.png" alt="">
                         <span class="cancel"></span>
                     </div>
-                    <div class="page p1 moved">
+                    <div class="page p1 moved movestop">
                         <div class="part part1"><img src="img/p1-1.png" alt=""></div>
                         <div class="part part2 moffset"><img src="img/p1-2.png" alt=""></div>
                         <div class="part part3 moffset">
