圆形变形，其他bugfix

--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
         <!--S top-bar -->
         <div id="J_topBar" class="top-bar">
             <div class="top-bar-con">
-                <div class="moving-bg"></div>
+                <div class="moving-bg"><em></em></div>
                 <span><em class="bg"></em></span>
                 <span class="cur"><em class="bg"></em></span>
                 <span><em class="bg"></em></span>    
@@ -56,9 +56,12 @@
                     <span></span>
                 </div>
             </div>
+            <!-- scan -->
+            <div class="page-scan"><img src="img/scan.png" alt=""></div>
+            
             <!--S main -->
             <div id="J_main" class="main">
-                <div class="page-copy"><img src="img/search-bd.png" alt=""></div>
+                
                 <div class="page-con">
                     <div class="page p0 search-page">
                         <img src="img/search-bd.png" alt="">
